# mplayer-actors

./: .activate.sh  .dockerignore  .func.sh  .gitignore  .gitmodules  .tmuxp-1.yaml  .tmuxp.yaml  Dockerfile  compose.yaml  playlist.txt  pyproject.toml  requirements.txt  reset.sh  setup.cfg  setup.py
doc/: refs.txt
docs/: ToDo.txt  done.txt  pulse.txt  py-mpv.txt  refs.txt  trace.txt
essais/cur/: main.py
essais/logo/: Directory.py  DisplayMatrix.py  ExecuteInput.py  StringFormat.py  UserInput.py  logo.py.bak  logo_data.py  logo_data2.py  mplayer.py  mplayer_config.py  mplayer_data.py  test.py
essais/mpv/: __init__.py  main.py  mpv.py
essais/sock/: client.py  log.py  main.py  q.py
essais/sock/introspecter/: introspecter.py
mpv-examples/libmpv/sdl/: .func.sh  main.c  main_sw
scripts/: pulseinit.sh
src/: Kinsider.py  __main__.py  cli.py  logger.py  main.py  settings.py  sock.py  strings.py  test.py  utils.py
src/cur/: main.py  pycurses.py  test.py
src/mpv/: _types.py  core.py  json_ipc.py  main.py
src/services/: __init__.py  settings.py
src/services/api/: _types.py  api.py  constants.py  helpers.py
src/services/base/: __init__.py  actor.py  actor_system.py  base_actor.py  helpers.py  message.py  sig.py  utils.py
src/services/dispatcher/: dispatcher.py  helpers.py
src/services/display/: constants.py  display.py  helpers.py  wcurses.py
src/services/dummy/: dummy.py
src/services/files/: _types.py  files.py  helpers.py
src/services/input/: constants.py  helpers.py  input.py  prompt.py
src/wcurses/: __init__.py  wcurses.py
(+24 files in other folders)
